# esmart-backend

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.docs.yml  docker-compose.local.yml  docker-compose.production.yml  manage.py  pyproject.toml  scratch.py
.agents/rules/: django.md
.agents/skills/: SKILL.md
.devcontainer/: devcontainer.json
.envs/.local/: .django  .postgres
.github/: dependabot.yml
.github/workflows/: ci.yml
compose/production/django/: Dockerfile
compose/production/postgres/: Dockerfile
compose/production/postgres/init/: init_schemas.sh
config/: asgi.py  celery_app.py  db_routers.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
core/: conftest.py
core/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
core/templates/: base.html
core/users/: apps.py  views.py
core/users/tests/: factories.py  test_admin.py  test_forms.py  test_models.py  test_urls.py  test_views.py
core/users/tests/api/: test_urls.py  test_views.py
db_controller/: admin.py  apps.py  models.py
docs/: conf.py  howto.rst  make.bat
legacy/: models.py
legacy/models/: __init__.py  accounting.py  finance.py  master_data.py  purchasing.py  sales.py
locale/en_US/LC_MESSAGES/: django.po
locale/fr_FR/LC_MESSAGES/: django.po
locale/pt_BR/LC_MESSAGES/: django.po
master_data/: urls.py
master_data/serializers/: __init__.py  accounts.py  cities.py  countries.py  product_categories.py  regions.py  sales.py  suppliers.py  warehouses.py
master_data/views/: __init__.py  accounts.py  cities.py  countries.py  product_categories.py  regions.py  sales.py  suppliers.py  warehouses.py
schema/: db_controller.sql  esmart.sql
